ACLOCAL_AMFLAGS = -I m4

SUBDIRS = 	po \
		src

AM_CFLAGS = @CFLAGS@ -Werror -DLOCALEDIR=\""@localedir@"\" -DDATADIR=\""@datadir@/2lgc"\"
export AM_CFLAGS

EXTRA_DIST = config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath  config.rpath
